<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main_dark">


    <LinearLayout
        android:id="@+id/l1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.9"
        android:background="@color/oklcolor_darker_inv"
        android:gravity="right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/score_info"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="6dp"
            android:contentDescription="@string/score"
            android:gravity="center|end"
            android:text="@string/score"
            android:textAllCaps="true"
            android:textColor="@color/white_darker"
            android:textSize="23sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="15dp"
            android:contentDescription="@string/points"
            android:gravity="center|end"
            android:text="0"
            android:textColor="@color/white_darker"
            android:textSize="35dp"
            android:textStyle="bold|italic" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/l2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/l1">

        <android.widget.Button
            android:id="@+id/photo_recognize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:alpha="0.89"
            android:background="@drawable/button_menu_light"
            android:drawableEnd="@drawable/baseline_photo_camera_24"
            android:drawablePadding="5dp"
            android:padding="20dp"
            android:text="@string/photos"
            android:textColor="@color/white_darker"
            android:textSize="16sp"
            android:textStyle="bold" />

        <android.widget.Button
            android:id="@+id/visiting_park"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:alpha="0.89"
            android:background="@drawable/button_menu_light"
            android:drawableEnd="@drawable/baseline_nature_24"
            android:drawablePadding="5dp"
            android:padding="20dp"
            android:text="@string/visiting"
            android:textColor="@color/white_darker"
            android:textSize="16sp"
            android:textStyle="bold" />

        <android.widget.Button
            android:id="@+id/onPicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:alpha="0.89"
            android:background="@drawable/button_menu_light"
            android:drawableEnd="@drawable/baseline_local_florist_24"
            android:drawablePadding="5dp"
            android:padding="20dp"
            android:text="@string/podpisz"
            android:textColor="@color/white_darker"
            android:textSize="16sp"
            android:textStyle="bold" />

        <android.widget.Button
            android:id="@+id/quiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:alpha="0.89"
            android:background="@drawable/button_menu_light"
            android:drawableEnd="@drawable/baseline_quiz_24"
            android:drawablePadding="5dp"
            android:padding="20dp"
            android:text="@string/quiz"
            android:textColor="@color/white_darker"
            android:textSize="16sp"
            android:textStyle="bold" />

        <android.widget.Button
            android:id="@+id/scoreBoard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:alpha="0.89"
            android:background="@drawable/button_menu"
            android:drawableEnd="@drawable/baseline_quiz_24"
            android:drawablePadding="5dp"
            android:padding="20dp"
            android:text="@string/tabela"
            android:textColor="@color/white_darker"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>