<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.PictureChoose"
    android:background="@drawable/background_main_dark">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/zubr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/zubr_okl"
            android:adjustViewBounds="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp">
        </ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/bisons"
            style="@style/TDStyle"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/picture_description"/>

        <ImageView
            android:id="@+id/konikPolski"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/konik_okl2"
            android:adjustViewBounds="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp">
        </ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/polish_pony"
            style="@style/TDStyle"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/picture_description"/>

        <ImageView
            android:id="@+id/dzik"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/dzik_okl"
            android:adjustViewBounds="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp">
        </ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/boars"
            style="@style/TDStyle"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/picture_description"/>

        <ImageView
            android:id="@+id/daniel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/daniel_okl2"
            android:adjustViewBounds="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp">
        </ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/fallow_deer"
            style="@style/TDStyle"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/picture_description"/>


    </LinearLayout>

</ScrollView>