<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main_dark"
    tools:context=".ui.MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_menu"
        android:gravity="center"
        android:text="@string/tablica_wynik_w"
        android:textAllCaps="true"
        android:textColor="@color/white_darker"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/whoIsLogged"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_menu"
        android:gravity="center"
        android:text="@string/you_are_logged"
        android:textColor="@color/white_darker"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/l1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.9"
        android:background="@drawable/button_menu"
        android:gravity="center"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/score_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/score"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/eby_zobaczy_wynik"
            android:textAllCaps="true"
            android:textColor="@color/white_darker"
            android:textSize="26sp"
            android:textStyle="bold|italic" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signInGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_google_login"
            android:drawableStart="@drawable/ic_google"
            android:drawablePadding="3dp"
            android:layout_marginTop="4dp"
            android:padding="6dp"
            android:text="Sing in with Google" />



    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="50dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tvRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="45dp"
            android:visibility="gone"
            android:padding="10dp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>